--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.2.0",
+    "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
     "vuex": "^4.1.0"
@@ -17,9 +18,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.2",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.8",
     "sass": "^1.45.0",
     "tailwindcss": "^3.0.23",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
