--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.45.0",
     "tailwindcss": "^3.0.23",
     "vite": "^4.3.9",
-    "vite-plugin-mock": "^2.9.6"
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
