--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
