--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.2.0",
+    "ali-oss": "^6.18.0",
     "axios": "^1.4.0",
+    "cos-js-sdk-v5": "^1.4.19",
+    "cropperjs": "^1.5.13",
+    "dayjs": "^1.11.9",
+    "driver.js": "^1.0.5",
+    "file-saver": "^2.0.5",
+    "gsap": "^3.12.2",
+    "md5": "^2.3.0",
+    "vee-validate": "^4.10.8",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
     "vuex": "^4.1.0",
@@ -22,6 +31,7 @@
     "mockjs": "^1.1.0",
     "postcss": "^8.4.8",
     "sass": "^1.45.0",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.0.23",
     "vite": "^4.3.9",
     "vite-plugin-mock": "^2.9.6",
